--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W3Schools Online Web Tutorials</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <section class="navbar">
-        
+        <div class="logo">
+            <img src="" alt="logo">
+        </div>
+        <div class="drop_menu">
+            <ul>
+                <li><a href="#">Tutorials <i class='bx bxs-down-arrow'></i></a></li>
+                <li><a href="#">References <i class='bx bxs-down-arrow'></i></a></li>
+                <li><a href="#">Exercises <i class='bx bxs-down-arrow'></i></a></li>
+                <li><a href="#">Videos</i></a></li>
+            </ul>
+        </div>
     </section>
 </body>
 </html>
