--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
     <section class="navbar">
         <div class="logo">
-            <img src="" alt="logo">
+            <img src="imgs/logo.png" alt="logo">
         </div>
+
         <div class="drop_menu">
             <ul>
                 <li><a href="#">Tutorials <i class='bx bxs-down-arrow'></i></a></li>
@@ -21,6 +22,21 @@
                 <li><a href="#">Videos</i></a></li>
             </ul>
         </div>
+
+        <div class="icon_menu">
+            <ul style="transform: translateY(2px);">
+                <li><a href="#"><i class='bx bxs-adjust' style="transform: rotate(180deg) translateY(2px);"></i></a></li>
+                <li><a href="#"><i class='bx bx-globe'></i></a></li>
+                <li><a href="#"><i class='bx bx-search'></i></a></li>
+            </ul>
+        </div>
+
+        <div class="buttons_menu">
+            <button class="btn warning"><span>Website</span></button>
+            <button class="btn"><span>Paid Courses</span></button>
+            <button class="btn success"><span>Log in</span></button>
+        </div>
+
     </section>
 </body>
 </html>
