--- a/index.html
+++ b/index.html
@@ -10,32 +10,53 @@
 </head>
 <body>
     <section class="navbar">
-        <div class="logo">
-            <img src="imgs/logo.png" alt="logo">
+        <div class="left_menus">
+            <div class="logo">
+                <img src="imgs/logo.png" alt="logo">
+            </div>
+    
+            <div class="drop_menu">
+                <ul>
+                    <li><a href="#">Tutorials <i class='bx bxs-down-arrow'></i></a></li>
+                    <li><a href="#">References <i class='bx bxs-down-arrow'></i></a></li>
+                    <li><a href="#">Exercises <i class='bx bxs-down-arrow'></i></a></li>
+                    <li><a href="#">Videos</i><span class="new_tag">NEW</span></a></li>
+                </ul>
+            </div>
         </div>
 
-        <div class="drop_menu">
-            <ul>
-                <li><a href="#">Tutorials <i class='bx bxs-down-arrow'></i></a></li>
-                <li><a href="#">References <i class='bx bxs-down-arrow'></i></a></li>
-                <li><a href="#">Exercises <i class='bx bxs-down-arrow'></i></a></li>
-                <li><a href="#">Videos</i></a></li>
-            </ul>
+        <div class="right_menus">
+            <div class="icon_menu">
+                <ul style="transform: translateY(2px);">
+                    <li><a href="#"><i class='bx bxs-adjust' style="transform: rotate(180deg) translateY(2px);"></i></a></li>
+                    <li><a href="#"><i class='bx bx-globe'></i></a></li>
+                    <li><a href="#"><i class='bx bx-search'></i></a></li>
+                </ul>
+            </div>
+    
+            <div class="buttons_menu">
+                <button class="btn warning"><span>Website</span><span class="new_tag">NEW</span></button>
+                <button class="btn"><span>Paid Courses</span></button>
+                <button class="btn success"><span>Log in</span></button>
+            </div>
         </div>
+    </section>
 
-        <div class="icon_menu">
-            <ul style="transform: translateY(2px);">
-                <li><a href="#"><i class='bx bxs-adjust' style="transform: rotate(180deg) translateY(2px);"></i></a></li>
-                <li><a href="#"><i class='bx bx-globe'></i></a></li>
-                <li><a href="#"><i class='bx bx-search'></i></a></li>
-            </ul>
+    <section class="search">
+        <h1 class="title">Learn to Code</h1>
+        <h3 class="sub_title">With the world's largest web developer site.</h3>
+        <div class="searchBtn">
+            <input type="text" name="" id="" placeholder="Search out tutorials, e.g. HTML">
+            <div class="logo"><i class='bx bx-search'></i></div>
         </div>
+        <a class="link" href="#">Not Sure Where To Begin?</a>
+    </section>
 
-        <div class="buttons_menu">
-            <button class="btn warning"><span>Website</span></button>
-            <button class="btn"><span>Paid Courses</span></button>
-            <button class="btn success"><span>Log in</span></button>
-        </div>
+    <svg style="background-color:#D9EEE1" width="100%" height="70" viewBox="0 0 100 100" preserveAspectRatio="none">
+        <path d="M0,0  L110,0C35,150 35,0 0,100z" fill="#282A35"></path>
+      </svg>
+
+    <section class="html">
 
     </section>
 </body>
