--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="right_menus">
             <div class="icon_menu">
                 <ul style="transform: translateY(2px);">
-                    <li><a href="#"><i class='bx bxs-adjust' style="transform: rotate(180deg) translateY(2px);"></i></a></li>
+                    <li><a href="#"><i class='bx bxs-adjust'></i></a></li>
                     <li><a href="#"><i class='bx bx-globe'></i></a></li>
                     <li><a href="#"><i class='bx bx-search'></i></a></li>
                 </ul>
