HTML section done

--- a/index.html
+++ b/index.html
@@ -56,8 +56,39 @@
         <path d="M0,0  L110,0C35,150 35,0 0,100z" fill="#282A35"></path>
       </svg>
 
-    <section class="html">
+    <section class="box html">
+        <div class="content">
+            <h1 class="title">HTML</h1>
+            <p class="subtitle">The language for building web pages</p>
+            <div class="buttons">
+                <button class="btn learn">Learn HTML</button>
+                <button class="btn video">Video Tutorial</button>
+                <button class="btn reference">HTML Reference</button>   
+            </div>
+        </div>
 
+        <div class="example">
+            <h1>HTML Example:</h1>
+            <div class="example_box">
+                <pre><code>
+                    &lt!DOCTYPE html&gt
+                    &lthtml&gt
+                    &lttitle&gtHTML Tutorial&lt/title&gt
+                    &ltbody&gt
+                    
+                    &lth1&gtThis is a heading&lt/h1&gt
+                    &ltp&gtThis is a paragraph.&lt/p&gt
+                    
+                    &lt/body&gt
+                    &lt/html&gt
+                </code></pre>
+                <div class="btn">Try it Yourself</div>
+            </div>
+        </div>
+    </section>
+
+    <section class="css">
+        1
     </section>
 </body>
 </html>
