--- a/index.html
+++ b/index.html
@@ -188,6 +188,23 @@
         </div>
     </section>
 
+    <section class="libraries">
+        <div class="library php">
+            <h1 class="title">PHP</h1>
+            <h3 class="subtitle">A web server programming language</h3>
+            <button class="btn">Learn PHP</button>
+        </div>
+        <div class="library jquery">
+            <h1 class="title">jQuery</h1>
+            <h3 class="subtitle">A JS library for developing web pages</h3>
+            <button class="btn">Learn jQuery</button>
+        </div>
+        <div class="library java">
+            <h1 class="title">Java</h1>
+            <h3 class="subtitle">A programming language</h3>
+            <button class="btn">Learn Java</button>
+        </div>
+    </section>
     <section class="library">1</section>
     <script src="js/toggleCodeboxTheme.js"></script>
 </body>
