languages section fixed & library html content done

--- a/index.html
+++ b/index.html
@@ -132,11 +132,15 @@
             <h1>javaScript Example:</h1>
             <div class="example_code">
                 <code>
-                    function myFunction() {
-                        let x = document.getElementById("demo");
-                        x.style.fontSize = "25px";
-                        x.style.color = "red";
-                    }
+                    <span class="arrow">&lt</span><span class="tag">button</span> <span class="attribute">onclick</span><span class="property">="myFunction()"</span><span class="arrow">&gt</span>Click Me!<span class="arrow">&lt</span><span class="tag">/button</span><span class="arrow">&gt</span> <br>
+                    <br>
+                    <span class="arrow">&lt</span><span class="tag">script</span><span class="arrow">&gt</span> <br>
+                    <span class="keyword">function</span> myFunction() { <br>
+                    &nbsp;&nbsp;<span class="keyword">let</span> x = document.getElementById(<span class="value">"demo"</span>); <br>
+                    &nbsp;&nbsp;x.style.fontSize = <span class="value">"25px"</span>; <br>
+                    &nbsp;&nbsp;x.style.color = <span class="value">"red"</span>; <br> 
+                    } <br>
+                    <span class="arrow">&lt</span><span class="tag">/script</span><span class="arrow">&gt</span> <br>
                 </code>
             </div>
             <button class="btn">Try it Yourself</button>
@@ -204,8 +208,24 @@
             <h3 class="subtitle">A programming language</h3>
             <button class="btn">Learn Java</button>
         </div>
+        <div class="library cpp">
+            <h1 class="title">C++</h1>
+            <h3 class="subtitle">A programming language</h3>
+            <button class="btn">Learn C++</button>
+        </div>
+        <div class="library w3css">
+            <h1 class="title">W3.CSS</h1>
+            <h3 class="subtitle">A CSS framework for faster and better responsive web pages</h3>
+            <button class="btn">Learn W3.CSS</button>
+        </div>
+        <div class="library bootstrap">
+            <h1 class="title">Bootstrap</h1>
+            <h3 class="subtitle">A CSS framework for designing better web pages</h3>
+            <button class="btn">Learn Bootstrap</button>
+        </div>
+        
     </section>
-    <section class="library">1</section>
+
     <script src="js/toggleCodeboxTheme.js"></script>
 </body>
 </html>
