--- a/index.html
+++ b/index.html
@@ -193,35 +193,51 @@
     </section>
 
     <section class="libraries">
-        <div class="library php">
-            <h1 class="title">PHP</h1>
-            <h3 class="subtitle">A web server programming language</h3>
-            <button class="btn">Learn PHP</button>
+        <div class="languages">
+            <div class="library php">
+                <h1 class="title">PHP</h1>
+                <h3 class="subtitle">A web server programming language</h3>
+                <button class="btn">Learn PHP</button>
+            </div>
+            <div class="library jquery">
+                <h1 class="title">jQuery</h1>
+                <h3 class="subtitle">A JS library for developing web pages</h3>
+                <button class="btn">Learn jQuery</button>
+            </div>
+            <div class="library java">
+                <h1 class="title">Java</h1>
+                <h3 class="subtitle">A programming language</h3>
+                <button class="btn">Learn Java</button>
+            </div>
+            <div class="library cpp">
+                <h1 class="title">C++</h1>
+                <h3 class="subtitle">A programming language</h3>
+                <button class="btn">Learn C++</button>
+            </div>
+            <div class="library w3css">
+                <h1 class="title">W3.CSS</h1>
+                <h3 class="subtitle">A CSS framework for faster and better responsive web pages</h3>
+                <button class="btn">Learn W3.CSS</button>
+            </div>
+            <div class="library bootstrap">
+                <h1 class="title">Bootstrap</h1>
+                <h3 class="subtitle">A CSS framework for designing better web pages</h3>
+                <button class="btn">Learn Bootstrap</button>
+            </div>
         </div>
-        <div class="library jquery">
-            <h1 class="title">jQuery</h1>
-            <h3 class="subtitle">A JS library for developing web pages</h3>
-            <button class="btn">Learn jQuery</button>
-        </div>
-        <div class="library java">
-            <h1 class="title">Java</h1>
-            <h3 class="subtitle">A programming language</h3>
-            <button class="btn">Learn Java</button>
-        </div>
-        <div class="library cpp">
-            <h1 class="title">C++</h1>
-            <h3 class="subtitle">A programming language</h3>
-            <button class="btn">Learn C++</button>
-        </div>
-        <div class="library w3css">
-            <h1 class="title">W3.CSS</h1>
-            <h3 class="subtitle">A CSS framework for faster and better responsive web pages</h3>
-            <button class="btn">Learn W3.CSS</button>
-        </div>
-        <div class="library bootstrap">
-            <h1 class="title">Bootstrap</h1>
-            <h3 class="subtitle">A CSS framework for designing better web pages</h3>
-            <button class="btn">Learn Bootstrap</button>
+
+        <div class="languages_menu">
+            <div class="red language c#">c#</div>
+            <div class="yellow language r">R</div>
+            <div class="grey language kotlin">Kotlin</div>
+            <div class="green language mysql">MySQL</div>
+
+            <div class="blue language node">Node.js</div>
+            <div class="red language react">React</div>
+            <div class="yellow language json">JSON</div>
+            <div class="grey language angular">AngularJS</div>
+
+
         </div>
         
     </section>
